--- a/angular/projects/admin/src/app/states/nemsis-state.component.html
+++ b/angular/projects/admin/src/app/states/nemsis-state.component.html
@@ -26,61 +26,57 @@
   <div class="row">
     <div class="col-lg-6 col-xl-4">
       <div class="mb-3">
-        <div class="array-field array-field--noclear">
-          <div class="form-field form-field--noclear form-field--nonempty">
-            <label>Repository Data Sets</label>
-            <div *ngFor="let version of repo?.dataSetVersions" class="array-field__item d-flex justify-content-between align-items-center">
-              {{ version | version }}
-              <span>
-                <ng-container *ngIf="isDataSetInstalled(version); let dataSet"
-                  ><shared-loader
-                    *ngIf="dataSet.id === isDataSetImporting?.id && isDataSetImporting.status?.code === 202"
-                    class="me-3"
-                  ></shared-loader
-                ></ng-container>
-                <i
-                  *ngIf="!isDataSetImporting && isDataSetInstalled(version); let dataSet"
-                  (click)="onDataSetImport(dataSet)"
-                  class="fas fa-file-import clickable me-3"
-                ></i>
-                <i *ngIf="isDataSetInstalled(version)" class="fas fa-check-circle text-success"></i>
-                <i
-                  *ngIf="!isDataSetInstalled(version) && !isDataSetInstalling"
-                  (click)="onDataSetInstall(version)"
-                  class="far fa-circle clickable"
-                ></i>
-                <shared-loader *ngIf="!isDataSetInstalled(version) && isDataSetInstalling === version"></shared-loader>
-              </span>
-            </div>
-            <div *ngIf="(repo?.dataSetVersions.length ?? 0) == 0" class="array-field__item">
-              <span *ngIf="!(repo?.initialized ?? false)">Repository not initialized</span>
-              <span *ngIf="repo?.initialized">None</span>
-            </div>
+        <div class="form-field form-field--noclear form-field--nonempty mb-3">
+          <label>Repository Data Sets</label>
+          <div *ngFor="let version of repo?.dataSetVersions" class="form-field__item d-flex justify-content-between align-items-center">
+            {{ version | version }}
+            <span>
+              <ng-container *ngIf="isDataSetInstalled(version); let dataSet"
+                ><shared-loader
+                  *ngIf="dataSet.id === isDataSetImporting?.id && isDataSetImporting.status?.code === 202"
+                  class="me-3"
+                ></shared-loader
+              ></ng-container>
+              <i
+                *ngIf="!isDataSetImporting && isDataSetInstalled(version); let dataSet"
+                (click)="onDataSetImport(dataSet)"
+                class="fas fa-file-import clickable me-3"
+              ></i>
+              <i *ngIf="isDataSetInstalled(version)" class="fas fa-check-circle text-success"></i>
+              <i
+                *ngIf="!isDataSetInstalled(version) && !isDataSetInstalling"
+                (click)="onDataSetInstall(version)"
+                class="far fa-circle clickable"
+              ></i>
+              <shared-loader *ngIf="!isDataSetInstalled(version) && isDataSetInstalling === version"></shared-loader>
+            </span>
+          </div>
+          <div *ngIf="(repo?.dataSetVersions.length ?? 0) == 0" class="form-field__item">
+            <span *ngIf="!(repo?.initialized ?? false)">Repository not initialized</span>
+            <span *ngIf="repo?.initialized">None</span>
           </div>
         </div>
       </div>
     </div>
     <div class="col-lg-6 col-xl-4">
       <div class="mb-3">
-        <div class="array-field array-field--noclear mb-3">
-          <div *ngIf="externalDataSets; let dataSets" class="form-field form-field--noclear form-field--nonempty">
-            <label>External Data Sets</label>
-            <div *ngFor="let dataSet of dataSets" class="array-field__item d-flex justify-content-between align-items-center">
-              <div>
-                {{ dataSet.fileName }}<br />
-                <span class="small">{{ dataSet.displayVersion }}</span>
-              </div>
-              <shared-loader *ngIf="dataSet.id === isDataSetImporting?.id && isDataSetImporting.status?.code === 202"></shared-loader>
-              <i
-                *ngIf="!isDataSetImporting"
-                (click)="onDataSetImport(dataSet)"
-                (click)="onDataSetImport(dataSet)"
-                class="fas fa-file-import clickable"
-              ></i>
+        <div *ngIf="externalDataSets; let dataSets" class="form-field form-field--noclear form-field--nonempty mb-3">
+          <label>External Data Sets</label>
+          <div *ngFor="let dataSet of dataSets" class="form-field__item d-flex justify-content-between align-items-center">
+            <div>
+              {{ dataSet.fileName }}<br />
+              <span class="small">{{ dataSet.displayVersion }}</span>
             </div>
-            <div *ngIf="(dataSets.length ?? 0) == 0" class="array-field__item">
-              <span>None</span>
-            </div>
+            <shared-loader *ngIf="dataSet.id === isDataSetImporting?.id && isDataSetImporting.status?.code === 202"></shared-loader>
+            <i
+              *ngIf="!isDataSetImporting"
+              (click)="onDataSetImport(dataSet)"
+              (click)="onDataSetImport(dataSet)"
+              class="fas fa-file-import clickable"
+            ></i>
+          </div>
+          <div *ngIf="(dataSets.length ?? 0) == 0" class="form-field__item">
+            <span>None</span>
           </div>
         </div>
         <shared-dropzone
@@ -99,48 +95,44 @@
   <div class="row">
     <div class="col-lg-6 col-xl-4">
       <div class="mb-5">
-        <div class="array-field array-field--noclear">
-          <div class="form-field form-field--noclear form-field--nonempty">
-            <label>Repository DEM Schematrons</label>
-            <div
-              *ngFor="let version of repo?.demSchematronVersions"
-              class="array-field__item d-flex justify-content-between align-items-center"
-            >
-              {{ version | version }}
-              <span>
-                <i *ngIf="isSchematronInstalled(version)" class="fas fa-check-circle text-success"></i>
-                <i
-                  *ngIf="!isSchematronInstalled(version) && !isSchematronInstalling"
-                  (click)="onSchematronInstall('DEMDataSet', version)"
-                  class="far fa-circle clickable"
-                ></i>
-                <shared-loader *ngIf="!isSchematronInstalled(version) && isSchematronInstalling === version"></shared-loader>
-              </span>
-            </div>
-            <div *ngIf="(repo?.demSchematronVersions.length ?? 0) == 0" class="array-field__item">
-              <span *ngIf="!(repo?.initialized ?? false)">Repository not initialized</span>
-              <span *ngIf="repo?.initialized">None</span>
-            </div>
+        <div class="form-field form-field--noclear form-field--nonempty mb-3">
+          <label>Repository DEM Schematrons</label>
+          <div
+            *ngFor="let version of repo?.demSchematronVersions"
+            class="form-field__item d-flex justify-content-between align-items-center"
+          >
+            {{ version | version }}
+            <span>
+              <i *ngIf="isSchematronInstalled(version)" class="fas fa-check-circle text-success"></i>
+              <i
+                *ngIf="!isSchematronInstalled(version) && !isSchematronInstalling"
+                (click)="onSchematronInstall('DEMDataSet', version)"
+                class="far fa-circle clickable"
+              ></i>
+              <shared-loader *ngIf="!isSchematronInstalled(version) && isSchematronInstalling === version"></shared-loader>
+            </span>
+          </div>
+          <div *ngIf="(repo?.demSchematronVersions.length ?? 0) == 0" class="form-field__item">
+            <span *ngIf="!(repo?.initialized ?? false)">Repository not initialized</span>
+            <span *ngIf="repo?.initialized">None</span>
           </div>
         </div>
       </div>
     </div>
     <div class="col-lg-6 col-xl-4">
       <div class="mb-5">
-        <div class="array-field array-field--noclear mb-3">
-          <div *ngIf="externalDemSchematrons; let schematrons" class="form-field form-field--noclear form-field--nonempty">
-            <label>External DEM Schematrons</label>
-            <div *ngFor="let schematron of schematrons" class="array-field__item">
-              {{ schematron.fileName }}<br />
-              <ng-container *ngIf="schematron.fileVersion"
-                ><span class="small">{{ schematron.fileVersion }}</span
-                ><br
-              /></ng-container>
-              <span class="small">{{ schematron.displayVersion }}</span>
-            </div>
-            <div *ngIf="(schematrons.length ?? 0) == 0" class="array-field__item">
-              <span>None</span>
-            </div>
+        <div *ngIf="externalDemSchematrons; let schematrons" class="form-field form-field--noclear form-field--nonempty mb-3">
+          <label>External DEM Schematrons</label>
+          <div *ngFor="let schematron of schematrons" class="form-field__item">
+            {{ schematron.fileName }}<br />
+            <ng-container *ngIf="schematron.fileVersion"
+              ><span class="small">{{ schematron.fileVersion }}</span
+              ><br
+            /></ng-container>
+            <span class="small">{{ schematron.displayVersion }}</span>
+          </div>
+          <div *ngIf="(schematrons.length ?? 0) == 0" class="form-field__item">
+            <span>None</span>
           </div>
         </div>
         <shared-dropzone
@@ -160,48 +152,44 @@
   <div class="row">
     <div class="col-lg-6 col-xl-4">
       <div class="mb-5">
-        <div class="array-field array-field--noclear">
-          <div class="form-field form-field--noclear form-field--nonempty">
-            <label>Repository EMS Schematrons</label>
-            <div
-              *ngFor="let version of repo?.emsSchematronVersions"
-              class="array-field__item d-flex justify-content-between align-items-center"
-            >
-              {{ version | version }}
-              <span>
-                <i *ngIf="isSchematronInstalled(version)" class="fas fa-check-circle text-success"></i>
-                <i
-                  *ngIf="!isSchematronInstalled(version) && !isSchematronInstalling"
-                  (click)="onSchematronInstall('EMSDataSet', version)"
-                  class="far fa-circle clickable"
-                ></i>
-                <shared-loader *ngIf="!isSchematronInstalled(version) && isSchematronInstalling === version"></shared-loader>
-              </span>
-            </div>
-            <div *ngIf="(repo?.emsSchematronVersions.length ?? 0) == 0" class="array-field__item">
-              <span *ngIf="!(repo?.initialized ?? false)">Repository not initialized</span>
-              <span *ngIf="repo?.initialized">None</span>
-            </div>
+        <div class="form-field form-field--noclear form-field--nonempty mb-3">
+          <label>Repository EMS Schematrons</label>
+          <div
+            *ngFor="let version of repo?.emsSchematronVersions"
+            class="form-field__item d-flex justify-content-between align-items-center"
+          >
+            {{ version | version }}
+            <span>
+              <i *ngIf="isSchematronInstalled(version)" class="fas fa-check-circle text-success"></i>
+              <i
+                *ngIf="!isSchematronInstalled(version) && !isSchematronInstalling"
+                (click)="onSchematronInstall('EMSDataSet', version)"
+                class="far fa-circle clickable"
+              ></i>
+              <shared-loader *ngIf="!isSchematronInstalled(version) && isSchematronInstalling === version"></shared-loader>
+            </span>
+          </div>
+          <div *ngIf="(repo?.emsSchematronVersions.length ?? 0) == 0" class="form-field__item">
+            <span *ngIf="!(repo?.initialized ?? false)">Repository not initialized</span>
+            <span *ngIf="repo?.initialized">None</span>
           </div>
         </div>
       </div>
     </div>
     <div class="col-lg-6 col-xl-4">
       <div class="mb-5">
-        <div class="array-field array-field--noclear mb-3">
-          <div *ngIf="externalEmsSchematrons; let schematrons" class="form-field form-field--noclear form-field--nonempty">
-            <label>External EMS Schematrons</label>
-            <div *ngFor="let schematron of schematrons" class="array-field__item">
-              {{ schematron.fileName }}<br />
-              <ng-container *ngIf="schematron.fileVersion"
-                ><span class="small">{{ schematron.fileVersion }}</span
-                ><br
-              /></ng-container>
-              <span class="small">{{ schematron.displayVersion }}</span>
-            </div>
-            <div *ngIf="(schematrons.length ?? 0) == 0" class="array-field__item">
-              <span>None</span>
-            </div>
+        <div *ngIf="externalEmsSchematrons; let schematrons" class="form-field form-field--noclear form-field--nonempty mb-3">
+          <label>External EMS Schematrons</label>
+          <div *ngFor="let schematron of schematrons" class="form-field__item">
+            {{ schematron.fileName }}<br />
+            <ng-container *ngIf="schematron.fileVersion"
+              ><span class="small">{{ schematron.fileVersion }}</span
+              ><br
+            /></ng-container>
+            <span class="small">{{ schematron.displayVersion }}</span>
+          </div>
+          <div *ngIf="(schematrons.length ?? 0) == 0" class="form-field__item">
+            <span>None</span>
           </div>
         </div>
         <shared-dropzone
