--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -127,7 +127,7 @@ form {
   }
 }
 
-:not(.form-field--noclear).form-field--editing.form-field--nonempty {
+:not(.form-field--multi):not(.form-field--noclear).form-field--editing.form-field--nonempty {
   &::after {
     display: block;
     position: absolute;
@@ -289,19 +289,16 @@ select:disabled {
   }
 }
 
-.form-group {
-  border-left: 2px solid $base-300;
-  padding-left: 0.875rem;
-}
-
-.array-field__item {
+.array-field__item,
+.form-field__item {
   @include h3-semibold;
 
   position: relative;
   padding: 0.375rem 0.875rem;
   color: $base-800;
 
-  & + .array-field__item {
+  & + .array-field__item,
+  & + .form-field__item {
     border-top: 2px solid $brand-primary-300;
   }
 
@@ -335,13 +332,15 @@ select:disabled {
     }
   }
 
-  .array-field .array-field__item {
+  .array-field .array-field__item,
+  .form-field .form-field__item {
     padding: 0;
   }
 }
 
 .form-field--editing {
-  .array-field__item {
+  .array-field__item,
+  .form-field__item {
     cursor: grab;
     &.sortable-chosen {
       cursor: grabbing;
@@ -350,16 +349,20 @@ select:disabled {
 }
 
 label + .array-field__item,
-.feedback + .array-field__item {
+.feedback + .array-field__item,
+label + .form-field__item,
+.feedback + .form-field__item {
   border-top: 2px solid $brand-primary-300;
   margin-top: 0.375rem;
 }
 
-.array-field__item + .form-field__content {
+.array-field__item + .form-field__content,
+.form-field__item + .form-field__content {
   border-top: 2px solid $brand-primary-300;
 }
 
-.array-field:not(.array-field--noclear) .array-field__item {
+.array-field:not(.array-field--noclear) .array-field__item,
+.form-field:not(.form-field--noclear) .form-field__item {
   padding-right: 3.25rem;
   &::after {
     display: block;
@@ -379,17 +382,22 @@ label + .array-field__item,
 
 .array-field__item + .array-field__item.array-field__item--invalid,
 .array-field__item.array-field__item--invalid + .form-field__content,
-.array-field__item.array-field__item--invalid + .array-field__item {
+.array-field__item.array-field__item--invalid + .array-field__item,
+.form-field__item + .form-field__item.form-field__item--invalid,
+.form-field__item.form-field__item--invalid + .form-field__content,
+.form-field__item.form-field__item--invalid + .form-field__item {
   border-top-color: $brand-secondary-500;
 }
 
-.array-field__item--invalid {
+.array-field__item--invalid,
+.form-field__item--invalid {
   .select-wrapper__select {
     color: $brand-secondary-500;
   }
 }
 
-.array-field__subitem {
+.array-field__subitem,
+.form-field__subitem {
   border-top: 2px dotted $base-300;
   margin: 0.375rem 0 0;
   padding: 0.375rem 0 0;
@@ -405,10 +413,6 @@ label + .array-field__item,
     margin-right: 0 !important;
     max-width: 100% !important;
   }
-}
-
-.form-field + .array-field__form {
-  margin-top: 0.5rem;
 }
 
 .recording-field {
