--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -289,7 +289,6 @@ select:disabled {
   }
 }
 
-.array-field__item,
 .form-field__item {
   @include h3-semibold;
 
@@ -297,7 +296,6 @@ select:disabled {
   padding: 0.375rem 0.875rem;
   color: $base-800;
 
-  & + .array-field__item,
   & + .form-field__item {
     border-top: 2px solid $brand-primary-300;
   }
@@ -332,14 +330,12 @@ select:disabled {
     }
   }
 
-  .array-field .array-field__item,
-  .form-field .form-field__item {
-    padding: 0;
+  .form-field__item {
+    padding-left: 0;
   }
 }
 
 .form-field--editing {
-  .array-field__item,
   .form-field__item {
     cursor: grab;
     &.sortable-chosen {
@@ -348,20 +344,16 @@ select:disabled {
   }
 }
 
-label + .array-field__item,
-.feedback + .array-field__item,
 label + .form-field__item,
 .feedback + .form-field__item {
   border-top: 2px solid $brand-primary-300;
   margin-top: 0.375rem;
 }
 
-.array-field__item + .form-field__content,
 .form-field__item + .form-field__content {
   border-top: 2px solid $brand-primary-300;
 }
 
-.array-field:not(.array-field--noclear) .array-field__item,
 .form-field:not(.form-field--noclear) .form-field__item {
   padding-right: 3.25rem;
   &::after {
@@ -380,23 +372,18 @@ label + .form-field__item,
   }
 }
 
-.array-field__item + .array-field__item.array-field__item--invalid,
-.array-field__item.array-field__item--invalid + .form-field__content,
-.array-field__item.array-field__item--invalid + .array-field__item,
 .form-field__item + .form-field__item.form-field__item--invalid,
 .form-field__item.form-field__item--invalid + .form-field__content,
 .form-field__item.form-field__item--invalid + .form-field__item {
   border-top-color: $brand-secondary-500;
 }
 
-.array-field__item--invalid,
 .form-field__item--invalid {
   .select-wrapper__select {
     color: $brand-secondary-500;
   }
 }
 
-.array-field__subitem,
 .form-field__subitem {
   border-top: 2px dotted $base-300;
   margin: 0.375rem 0 0;
