Fix display text feedback margins

--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-multi.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-multi.component.html
@@ -37,7 +37,7 @@
     [displayOnly]="displayOnly"
   ></shared-xsd-element-nillable>
 </ng-container>
-<span *ngIf="!isDisplayOnly" [class.feedback]="!isInvalid" [class.invalid-feedback]="isInvalid">
+<div *ngIf="!isDisplayOnly" [class.feedback]="!isInvalid" [class.invalid-feedback]="isInvalid">
   {{ displayText }}
   <span *ngIf="isInvalid">{{ errorMessages.join(' ') }}</span>
-</span>
+</div>
