Support attributes with primitive types

--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
@@ -1,5 +1,6 @@
 <ng-container [ngSwitch]="componentType">
   <shared-xsd-input
+    class="d-flex"
     *ngSwitchCase="COMPONENT_TYPES.input"
     [xsd]="xsd"
     [record]="record"
