--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -71,7 +71,7 @@ form {
   select {
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 9L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929L19 9' stroke='%232F4A56' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
-    background-position: right center;
+    background-position: calc(100% - 5px) center;
     appearance: none;
     padding-right: 2rem;
   }
@@ -127,7 +127,7 @@ form {
   }
 }
 
-:not(.form-field--noclear).form-field--editing.form-field--nonempty {
+:not(.form-field--multi):not(.form-field--noclear).form-field--editing.form-field--nonempty {
   &::after {
     display: block;
     position: absolute;
@@ -289,19 +289,14 @@ select:disabled {
   }
 }
 
-.form-group {
-  border-left: 2px solid $base-300;
-  padding-left: 0.875rem;
-}
-
-.array-field__item {
+.form-field__item {
   @include h3-semibold;
 
   position: relative;
   padding: 0.375rem 0.875rem;
   color: $base-800;
 
-  & + .array-field__item {
+  & + .form-field__item {
     border-top: 2px solid $brand-primary-300;
   }
 
@@ -334,10 +329,22 @@ select:disabled {
       color: $brand-secondary-500;
     }
   }
+
+  .form-field__item {
+    padding-left: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  input:not([type='checkbox']),
+  select,
+  textarea {
+    margin-left: 0;
+  }
 }
 
 .form-field--editing {
-  .array-field__item {
+  .form-field__item {
     cursor: grab;
     &.sortable-chosen {
       cursor: grabbing;
@@ -345,17 +352,17 @@ select:disabled {
   }
 }
 
-label + .array-field__item,
-.feedback + .array-field__item {
+label + .form-field__item,
+.feedback + .form-field__item {
   border-top: 2px solid $brand-primary-300;
   margin-top: 0.375rem;
 }
 
-.array-field__item + .form-field__content {
+.form-field__item + .form-field__content {
   border-top: 2px solid $brand-primary-300;
 }
 
-.array-field:not(.array-field--noclear) .array-field__item {
+.form-field:not(.form-field--noclear) .form-field__item {
   padding-right: 3.25rem;
   &::after {
     display: block;
@@ -373,19 +380,19 @@ label + .array-field__item,
   }
 }
 
-.array-field__item + .array-field__item.array-field__item--invalid,
-.array-field__item.array-field__item--invalid + .form-field__content,
-.array-field__item.array-field__item--invalid + .array-field__item {
+.form-field__item + .form-field__item.form-field__item--invalid,
+.form-field__item.form-field__item--invalid + .form-field__content,
+.form-field__item.form-field__item--invalid + .form-field__item {
   border-top-color: $brand-secondary-500;
 }
 
-.array-field__item--invalid {
+.form-field__item--invalid {
   .select-wrapper__select {
     color: $brand-secondary-500;
   }
 }
 
-.array-field__subitem {
+.form-field__subitem {
   border-top: 2px dotted $base-300;
   margin: 0.375rem 0 0;
   padding: 0.375rem 0 0;
@@ -394,10 +401,13 @@ label + .array-field__item,
     margin: 0;
     padding: 0;
   }
-}
 
-.form-field + .array-field__form {
-  margin-top: 0.5rem;
+  .form-control,
+  .select-wrapper__select {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    max-width: 100% !important;
+  }
 }
 
 .recording-field {
