--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
@@ -1,10 +1,12 @@
 <ng-container [ngSwitch]="componentType">
   <shared-xsd-input
+    class="d-flex"
     *ngSwitchCase="COMPONENT_TYPES.input"
     [xsd]="xsd"
     [record]="record"
     [basePath]="basePath"
     [element]="element"
+    [attribute]="attribute"
     [data]="data"
     [error]="error"
     [index]="index"
@@ -18,6 +20,7 @@
     [record]="record"
     [basePath]="basePath"
     [element]="element"
+    [attribute]="attribute"
     [data]="data"
     [error]="error"
     [index]="index"
@@ -31,6 +34,7 @@
     [record]="record"
     [basePath]="basePath"
     [element]="element"
+    [attribute]="attribute"
     [data]="data"
     [error]="error"
     [index]="index"
