--- a/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-element-input-city.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-element-input-city.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="isDisplayOnly">
-  <ng-container *ngIf="value as val; else noVal">{{ val }}</ng-container>
+  <ng-container *ngIf="value as val; else noVal">{{ inputFormatter(val) }}</ng-container>
   <ng-template #noVal>&nbsp;</ng-template>
 </ng-container>
 <ng-container *ngIf="!isDisplayOnly">
