--- a/angular/projects/admin/src/app/demographics/versions/preview-version-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/versions/preview-version-demographics.component.html
@@ -6,6 +6,7 @@
     <ul class="nav">
       <li class="nav__item"><a tabIndex="0" class="nav__link" routerLink="..">Details</a></li>
       <li class="nav__item"><a tabIndex="0" class="nav__link nav__link--active">XML</a></li>
+      <li class="nav__item"><a tabIndex="0" class="nav__link" routerLink="../validate">Validation</a></li>
     </ul>
   </div>
 </div>
