[Closes #249] Updated Story section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,7 +110,7 @@
     <div class="container">
       <h2>Our Story</h2>
       <h3>Dedicated to providing life saving efficiency.</h3>
-      <p class="mb-5">Peak Response (formerly NaTriage) was initially conceptualized in 2019 as part of the Tech to Protect Challenge, sponsored by NIST PSCR, aimed at fostering technological innovation for emergency responders. The solution came out of a focus on a common pain point: time spent documenting injuries and incidents at the scene of mass casualty incidents. These incidents are chaotic, high-pressure environments where time spent documenting can mean the difference between life and death. The quick tag scan and speech-to-text form filling were the first features, but the solution quickly expanded to include a variety of powerful sorting and data export options to improve efficiency, both at the point of contact with the patient and also for the incident commander monitoring the entire scene.</p>
+      <p class="mb-5">Peak Response (formerly NaTriage) was initially conceptualized in 2019 as part of the Tech to Protect Challenge, sponsored by NIST PSCR, aimed at fostering technological innovation for emergency responders. The solution came out of a focus on a common pain point: time spent documenting injuries and incidents at the scene of mass casualty incidents. These incidents are chaotic, high-pressure environments where time spent documenting can mean the difference between life and death.</p>
       <div id="story__bios" class="row">
         <div class="col-lg-3">
           <img src="/images/bio-francis.jpg" alt="Portrait of Francis Li">
@@ -125,8 +125,8 @@
           <img src="/images/bio-britt.jpg" alt="Portrait of Britt Jensen">
         </div>
         <div class="col-lg-9">
-          <h4>Britt Jensen<span>&nbsp;&nbsp;|&nbsp;&nbsp;Co-Founder</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/britt-jensen-10957164/"><i class="fab fa-linkedin"></i></a></h4>
-          <p>Prior to co-founding Peak Response, Britt worked in product design consulting where she helped develop everything from medical devices to children’s toys for clients around the world. She is passionate about bringing user-centered products to industries that are not traditionally design-focused and believes that everyone, no matter how highly trained, is able to do their work more effectively with well-designed products. As CEO of Peak Response, Britt is focused on product definition, user validation, business strategy, marketing, and partnership development. She is committed to immersing herself in the public safety industry to build products that are simple, relevant, and innovative. Britt is a graduate of Stanford University’s design program.</p>
+          <h4>Britt Jensen<span>&nbsp;&nbsp;|&nbsp;&nbsp;Co-Founder/Advisor</span>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/britt-jensen-10957164/"><i class="fab fa-linkedin"></i></a></h4>
+          <p>Prior to co-founding Peak Response, Britt worked in product design consulting where she helped develop everything from medical devices to children’s toys for clients around the world. She is passionate about bringing user-centered products to industries that are not traditionally design-focused and believes that everyone, no matter how highly trained, is able to do their work more effectively with well-designed products. Britt is a graduate of Stanford University’s design program.</p>
         </div>
       </div>
       <div class="row">
